# abaco

./: -o  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SECURITY.md  bench-history.csv  bench-latest.md  cyrb.toml  cyrius.cyml  cyrius.toml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: bench.bcyr  bench.cyr  bench_eval.bcyr  bench_eval.cyr  bench_units.bcyr  bench_units.cyr  benchmarks.rs
crates/abaco-ai/: Cargo.toml
crates/abaco-ai/src/: lib.rs
crates/abaco-core/: Cargo.toml
crates/abaco-core/src/: lib.rs
crates/abaco-eval/: Cargo.toml
crates/abaco-eval/src/: lib.rs
crates/abaco-gui/: Cargo.toml
crates/abaco-gui/src/: app.rs  lib.rs  theme.rs
crates/abaco-gui/src/views/: calculator.rs  converter.rs  history.rs  mod.rs  plotter.rs  sidebar.rs
crates/abaco-units/: Cargo.toml
crates/abaco-units/src/: lib.rs
docs/: README.md  architecture.md  development.md  mcp-tools.md  roadmap.md
docs/audit/: 2026-04-14.md
examples/: basic.rs
fuzz/: fuzz_eval.cyr  fuzz_ntheory.cyr  fuzz_units.cyr  run.sh
programs/: basic.cyr
rust-old/: bench-history.csv
rust-old/src/: dsp.rs  eval.rs  ntheory.rs
scripts/: bench-history.sh  version-bump.sh
src/: ai.cyr  ai.rs  core.cyr  core.rs  dsp.cyr  dsp.rs  eval.cyr  eval.rs  lib.rs  main.cyr  main.rs  ntheory.cyr  ntheory.rs  units.cyr  units.rs
tests/: test.sh  test_ai.tcyr  test_dsp.cyr  test_dsp.tcyr  test_eval.cyr  test_eval.tcyr  test_integration.tcyr  test_ntheory.cyr  test_ntheory.tcyr  test_simd.cyr  test_simd.tcyr  test_units.cyr  test_units.tcyr
