[package]
name = "abaco-gui"
version = "2026.3.18"
edition = "2024"
description = "Desktop GUI for Abaco calculator and unit converter — egui/eframe with wgpu backend"
license = "GPL-3.0"

[dependencies]
abaco-core = { path = "../abaco-core" }
abaco-eval = { path = "../abaco-eval" }
abaco-units = { path = "../abaco-units" }
abaco-ai = { path = "../abaco-ai" }
egui = { workspace = true }
eframe = { workspace = true }
egui_plot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
